# zed-xcode-mcp-bundle

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
src/: lib.rs
